--- a/java/res/xml/method.xml
+++ b/java/res/xml/method.xml
@@ -365,16 +365,17 @@
             android:imeSubtypeExtraValue="KeyboardLayoutSet=swiss,AsciiCapable,SupportTouchPositionCorrection,EmojiCapable"
             android:isAsciiCapable="true"
     />
-    <!-- where do I get the subtypeId from?
+
+    <!-- where do I get the subtypeId from? -->
     <subtype android:icon="@drawable/ic_ime_switcher_dark"
             android:label="@string/subtype_gd"
-            android:subtypeId="0xb045e755"
+            android:subtypeId="0xfaa12baa"
             android:imeSubtypeLocale="gd"
             android:languageTag="gd"
             android:imeSubtypeMode="keyboard"
             android:imeSubtypeExtraValue="TrySuppressingImeSwitcher,AsciiCapable,SupportTouchPositionCorrection,EmojiCapable"
             android:isAsciiCapable="true"
-    /> -->
+    />
     <subtype android:icon="@drawable/ic_ime_switcher_dark"
             android:label="@string/subtype_generic"
             android:subtypeId="0xb939573c"
