Got morekeys working. Order still needs cleaning up.
Change-Id: Ib9a690667fb8b5d90b0c297efd0649ae25b411c8

--- a/java/res/xml/keyboard_layout_set_goidelic.xml
+++ b/java/res/xml/keyboard_layout_set_goidelic.xml
@@ -22,7 +22,7 @@
     xmlns:latin="http://schemas.android.com/apk/res/com.android.inputmethod.latin">
     <Element
         latin:elementName="alphabet"
-        latin:elementKeyboard="@xml/kbd_qwerty"
+        latin:elementKeyboard="@xml/kbd_goidelic"
         latin:enableProximityCharsCorrection="true" />
     <Element
         latin:elementName="symbols"
