Add some more secial keys
Change-Id: I3d875d99ae819b48afa3296dfdcdcf4992a84977

--- a/java/res/xml/method.xml
+++ b/java/res/xml/method.xml
@@ -52,7 +52,7 @@
     fr: French/azerty
     fr_CA: French (Canada)/qwerty
     fr_CH: French (Switzerland)/swiss
-    gd: Scottish Gaelic/qwerty
+    gd: Scottish Gaelic/goidelic
     gl_ES: Galician (Spain)/spanish
     hi: Hindi/hindi
     hi: Hindi/hindi_compact
