--- a/java/res/xml/rowkeys_goidelic3.xml
+++ b/java/res/xml/rowkeys_goidelic3.xml
@@ -29,7 +29,8 @@
     <Key
         latin:keySpec="b"
         latin:keyHintLabel=";"
-        latin:additionalMoreKeys=";" />
+        latin:additionalMoreKeys=";"
+        latin:moreKeys="!text/morekeys_b" />
     <Key
         latin:keySpec="n"
         latin:keyHintLabel="!"
