--- a/tools/make-keyboard-text/res/values-gd/donottranslate-more-keys.xml
+++ b/tools/make-keyboard-text/res/values-gd/donottranslate-more-keys.xml
@@ -65,8 +65,8 @@
     <!-- U+1E1F: "ḟ" Latin Small Letter F with Dot Above  -->
     <string name="morekeys_f">&#x1E1F;</string>
     <!-- U+0026: "&" Ampersand
-         U+0121: "ġ" Latin Small Letter G with Dot Above  -->
-    <string name="morekeys_g">&#x0026;,&#x0121;</string>
+         U+0121: "ġ" Latin Small Letter G with Dot Above -->
+    <string name="morekeys_g">%,&#x0026;,&#x0121;</string>
     <!-- U+1E41: "ṁ" Latin Small Letter M with Dot Above  -->
     <string name="morekeys_m">&#x1E41;</string>
     <!-- U+1E45: "ṅ" Latin Small Letter N with Dot Above
